Closed
Bug 100106
Opened 24 years ago
Closed 24 years ago
XMLHttpRequest.responseText empty if XML parsing error
Categories
(Core :: XML, defect, P2)
Core
XML
Tracking
()
VERIFIED
FIXED
mozilla0.9.5
People
(Reporter: hjtoi-bugzilla, Assigned: hjtoi-bugzilla)
References
()
Details
(Whiteboard: PDT+,[fixed on trunk and 0.9.4 branch])
Attachments
(1 file)
|
4.89 KB,
patch
|
harishd
:
review+
vidur
:
superreview+
|
Details | Diff | Splinter Review |
*sigh* made one more testcase and found this... Simple fix, attaching.
| Assignee | ||
Comment 1•24 years ago
|
||
nsbranch+ since this is pretty important, and the fix is trivial.
Status: NEW → ASSIGNED
Keywords: nsbranch+
Priority: -- → P2
Whiteboard: [fixinhand]
Target Milestone: --- → mozilla0.9.5
| Assignee | ||
Comment 2•24 years ago
|
||
Attachment #49603 -
Flags: review+
Comment 3•24 years ago
|
||
Comment on attachment 49603 [details] [diff] [review]
fix and testcase
sr=vidur
Attachment #49603 -
Flags: superreview+
| Assignee | ||
Comment 4•24 years ago
|
||
Fixed on trunk, leaving open to track situation for branch.
Whiteboard: [fixinhand] → [fixed on trunk]
Comment 5•24 years ago
|
||
PDT+. Pls check it into today.
Whiteboard: [fixed on trunk] → PDT+,[fixed on trunk]
| Assignee | ||
Comment 6•24 years ago
|
||
Fixed on the 0.9.4 branch as well, marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: PDT+,[fixed on trunk] → PDT+,[fixed on trunk and 0.9.4 branch]
Comment 7•24 years ago
|
||
Verified on the Sept 24th branch Mac OS X build (2001-09-24-04) and Windows ME
Sept 25th branch build (2001-09-25-05).
Keywords: vtrunk
Comment 8•24 years ago
|
||
Verified on the Sept 25th linux branch build (2001-09-25-04)
Updated•23 years ago
|
QA Contact: petersen → rakeshmishra
Comment 9•23 years ago
|
||
verified fixed on trunk build 2002-12-12-08-trunk on win2k with the testcase at
http://green/heikki/xgetinvalid.html.
The output under the responseXML was:
<?xml version="1.0"?>Three<parsererror
xmlns="http://www.mozilla.org/newlayout/xml/parsererror.xml">XML Parsing Error:
mismatched tag. Expected: </d>.
Location: http://green/heikki/invalid.xml
Line Number 9, Column 22:<sourcetext> <d id="id3">Three</a></d>
---------------------^</sourcetext></parsererror>
marking verified
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•