Bug 100106, XMLHttpRequest.responseText is empty if XML parser error. r=harishd, sr=vidur.